--- a/Documents/project/from_gerrit/pcl_demo/.vscode/settings.json
+++ b/Documents/project/from_gerrit/pcl_demo/.vscode/settings.json
@@ -36,5 +36,6 @@
         "memory": "cpp",
         "thread": "cpp",
         "tuple": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
