--- a/pcl_demo/.vscode/settings.json
+++ b/pcl_demo/.vscode/settings.json
@@ -27,6 +27,14 @@
         "__bit_reference": "cpp",
         "iterator": "cpp",
         "__locale": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "iosfwd": "cpp",
+        "utility": "cpp",
+        "__functional_base": "cpp",
+        "istream": "cpp",
+        "locale": "cpp",
+        "memory": "cpp",
+        "thread": "cpp",
+        "tuple": "cpp"
     }
 }
